tests/snapshots/examples_fixtures/basics__either_and_option.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/either_and_option.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `findInArray` has the wrong type.

  --> examples/basics/either_and_option.flx:24:28
   |
19 | fn findInArray(arr, target) {

20 |     findHelper(arr, target, 0)

21 | }

22 | 

23 | let numbers = [|10, 20, 30, 40, 50|];

24 | print(findInArray(numbers, 30));
   |                            ^^
   |                            -- this argument is `Int`

Help:
  Expected `Option<Int>` as the 2nd argument.
  Suppressed 1 nearby duplicate E300 diagnostic(s).


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `findInArray` has the wrong type.

  --> examples/basics/either_and_option.flx:53:34
   |
19 | fn findInArray(arr, target) {

20 |     findHelper(arr, target, 0)

21 | }

22 | 

23 | let numbers = [|10, 20, 30, 40, 50|];

24 | print(findInArray(numbers, 30));

25 | print(findInArray(numbers, 99));

26 | 

27 | 

28 | fn validateAge(input) {

29 |     if input < 0 {

30 |         Left("age cannot be negative")

31 |     } else {

32 |     if input > 150 {

33 |         Left("age seems unrealistic")

34 |     } else {

35 |     Right(input)

36 | }

37 | }

38 | }

39 | 

40 | print(validateAge(25));

41 | print(validateAge(-5));

42 | print(validateAge(200));

43 | 

44 | 

45 | fn optionToEither(opt, errorMsg) {

46 |     match opt {

47 |         Some(x) -> Right(x),

48 |         None -> Left(errorMsg),

49 |         _ -> Left("unknown"),

50 |     }

51 | }

52 | 

53 | let found = findInArray(numbers, 30);
   |                                  ^^
   |                                  -- this argument is `Int`

Help:
  Expected `Option<Int>` as the 2nd argument.
  Suppressed 1 nearby duplicate E300 diagnostic(s).

Found 2 errors.
== stdout ==
<not executed>
